automatically backed up by learn

--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
 
   <form action="#" method="post">
     <labe>Name</labe>
-    <input type="text" name="fullname" id="" <placeholder="your name" required>
+    <input type="text" id="fullname" name="fullname" id="" <placeholder="your name" required>
 
   </form>
 
