automatically backed up by learn

--- a/contact.html
+++ b/contact.html
@@ -20,6 +20,7 @@
   <form action="#" method="post">
     <labe for="fullname">Name</labe>
     <input type="text" id="fullname" name="fullname" id="" placeholder="your name" required>
+    <label for="email">Email</label>
 
   </form>
 
