automatically backed up by learn

--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
   width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 
   <form action="#" method="post">
-    <labe for="fullname">Name</labe>
+    <label for="fullname">Name</label>
     <input type="text" id="fullname" name="fullname" id="" placeholder="your name" required>
     <label for="email">Email</label>
 
