automatically backed up by learn

--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
     <label for="fullname">Name</label>
     <input type="text" id="fullname" name="fullname" id="" placeholder="your name" required>
     <label for="email">Email</label>
-
+    <input type="email" name="email" id="email" placeholder="email" required>
   </form>
 
 </body>
