--- a/contact.html
+++ b/contact.html
@@ -22,6 +22,8 @@
     <input type="text" id="fullname" name="fullname" id="" placeholder="your name" required>
     <label for="email">Email</label>
     <input type="email" name="email" id="email" placeholder="email" required>
+    <label for="phone">Phone</label>
+    <input type="tel" name="" value="">
   </form>
 
 </body>
