--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
     <label for="email">Email</label>
     <input type="email" name="email" id="email" placeholder="email" required>
     <label for="phone">Phone</label>
-    <input type="tel" name="" value="">
+    <input type="tel" name="phone" id="phone" placeholder="your phone (optional)">
   </form>
 
 </body>
