--- a/contact.html
+++ b/contact.html
@@ -24,6 +24,8 @@
     <input type="email" name="email" id="email" placeholder="email" required>
     <label for="phone">Phone</label>
     <input type="tel" name="phone" id="phone" placeholder="your phone (optional)">
+    <label for="message">Message</label>
+    <input type="text" name="" value="">
   </form>
 
 </body>
