--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
     <label for="phone">Phone</label>
     <input type="tel" name="phone" id="phone" placeholder="your phone (optional)">
     <label for="message">Message</label>
-    <input type="text" name="" value="">
+    <textarea id="message" name="message" rows="10"></textarea>
   </form>
 
 </body>
