--- a/contact.html
+++ b/contact.html
@@ -26,6 +26,7 @@
     <input type="tel" name="phone" id="phone" placeholder="your phone (optional)">
     <label for="message">Message</label>
     <textarea id="message" name="message" rows="10"></textarea>
+    <input type="submit" name="" value="send">
   </form>
 
 </body>
